electrs/electrs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: electrs
  namespace: bitcoin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: electrs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: electrs
    spec:
      containers:
      - image: philipcristiano/electrs:0.10.3
        imagePullPolicy: IfNotPresent
        name: electrs
        ports:
        - containerPort: 50001
          protocol: TCP
        resources: {}
        volumeMounts:
        - name: electrs-vol
          mountPath: /data
        - name: electrs-conf
          mountPath: "/root/.electrs/config.toml"
          subPath: config.toml
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: electrs-vol
        persistentVolumeClaim:
          claimName: electrs-pvc
      - name: electrs-conf
        secret:
          secretName: electrs-conf
