electrs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: electrs
  namespace: bitcoin
spec:
  ingressClassName: nginx
  rules:
  - host: electrs.schmuckele.nl
    http:
      paths:
      - backend:
          service:
            name: electrs
            port:
              number: 50001
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - electrs.schmuckele.nl
    secretName: electrs.schmuckele.nl-tls
